syntax = "proto3";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

import "stats/messages/request.proto";

service RecommendationsController {
    rpc GetRecommendationsForUser (stats.service.analyzer.UserPredictionsRequestProto)
        returns (stream stats.service.analyzer.RecommendedEventProto);

    rpc GetSimilarEvents (stats.service.analyzer.SimilarEventsRequestProto)
        returns (stream stats.service.analyzer.RecommendedEventProto);

    rpc GetInteractionsCount (stats.service.analyzer.InteractionsCountRequestProto)
        returns (stream stats.service.analyzer.RecommendedEventProto);
}